--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,15 +4,21 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3001",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
+    "framer-motion": "^12.6.2",
+    "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-router": "^7.4.0",
+    "recharts": "^2.15.1",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
